Removed overflow issue

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -63,7 +63,6 @@
 	}
 
 	&__ending {
-		margin: 20px 0;
-		padding-bottom: 15px;
+		padding: 20px 0 15px 0;
 	}
 }
